<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_navi_more_android_white"
        android:title="@string/more"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/action_delete"
                android:icon="@drawable/ic_tab_delete_grey"
                android:title="@string/delete"
                app:showAsAction="never" />

            <!--<item-->
                <!--android:id="@+id/action_share"-->
                <!--android:icon="@drawable/ic_tab_share_grey"-->
                <!--android:title="@string/share"-->
                <!--app:showAsAction="never" />-->
            <!--<item-->
                <!--android:id="@+id/action_copy"-->
                <!--android:icon="@drawable/ic_tab_copy_grey"-->
                <!--android:title="@string/copy"-->
                <!--app:showAsAction="never" />-->

            <!--<item-->
                <!--android:id="@+id/action_move"-->
                <!--android:icon="@drawable/ic_tab_move_grey"-->
                <!--android:title="@string/move"-->
                <!--app:showAsAction="never" />-->

            <item
                android:id="@+id/action_rename"
                android:icon="@drawable/ic_tab_rename_grey"
                android:title="@string/rename"
                app:showAsAction="never" />

            <item
                    android:id="@+id/action_new_folder"
                    android:icon="@drawable/ic_tab_newfolder_grey"
                    android:title="@string/newFolder"
                    app:showAsAction="never" />

            <item
                android:id="@+id/action_selectAll"
                android:icon="@drawable/ic_tab_selectall_grey"
                android:title="@string/selectAll"
                app:showAsAction="never" />
        </menu>

    </item>

</menu>