<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_search"
            android:title="Search"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:showAsAction="always|collapseActionView" />

    <item
            android:id="@+id/action_more"
            android:icon="@drawable/ic_navi_more_android_white"
            android:title="more"
            app:showAsAction="always">

        <menu>

            <item
                    android:id="@+id/action_view_type"
                    android:enabled="true"
                    android:icon="@drawable/ic_drawer_backup_grey"
                    android:title="@string/view_by_list"
                    app:showAsAction="never"/>
            <item
                    android:id="@+id/action_select_mode"
                    android:enabled="true"
                    android:icon="@drawable/ic_tab_select_grey"
                    android:title="@string/select"
                    app:showAsAction="never"/>

            <item
                    android:id="@+id/action_new_folder"
                    android:icon="@drawable/ic_tab_newfolder_grey"
                    android:title="@string/newFolder"
                    app:showAsAction="never" />
        </menu>
    </item>
</menu>