<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto">
    <data/>

    <androidx.drawerlayout.widget.DrawerLayout
            android:id="@+id/drawer_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                    android:id="@+id/appbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/AppTheme.AppBarOverlay">

                <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:popupTheme="@style/AppTheme.PopupOverlay"/>

            </com.google.android.material.appbar.AppBarLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:id="@+id/buttons"
                          android:orientation="horizontal">
                <Button
                        android:text="@string/eulaTitle"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/buttonEULA"/>
                <Button
                        android:text="@string/statementTitle"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/buttonStatement"/>
                <Button
                        android:text="@string/feedbackTitle"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/buttonFeedback"/>
                <Button
                        android:text="@string/helpTitle"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/buttonHelp"/>
                <Button
                        android:text="@string/browserTitle"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/buttonBrowser"/>
            </LinearLayout>

            <fragment
                    android:id="@+id/container"
                    android:name="androidx.navigation.fragment.NavHostFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:defaultNavHost="true"
                    app:navGraph="@navigation/nav_graph"/>

        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
                android:id="@+id/navigation_view"
                style="@style/Widget.MaterialComponents.NavigationView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                app:menu="@menu/menu_navigation"/>

    </androidx.drawerlayout.widget.DrawerLayout>



</layout>
