<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools" android:id="@+id/nav_graph"
            app:startDestination="@id/homeFragment">

    <fragment android:id="@+id/browserFragment"
              android:name="com.transcend.otg.BrowserFragment"
              android:label="BrowserFragment"
              tools:layout="@layout/fragment_browser">

        <argument
                android:name="root"
                app:argType="string"
                app:nullable="false"
                android:defaultValue="none" />
    </fragment>

    <fragment android:id="@+id/sdFragment"
              android:name="com.transcend.otg.BrowserFragment"
              android:label="BrowserFragment"
              tools:layout="@layout/fragment_browser">

        <argument
                android:name="root"
                app:argType="string"
                app:nullable="false"
                android:defaultValue="none" />
    </fragment>

    <fragment android:id="@+id/EULAFragment"
              android:name="com.transcend.otg.EULAFragment"
              android:label="@string/eulaTitle"
              tools:layout="@layout/fragment_eula"/>

    <fragment android:id="@+id/feedbackFragment"
              android:name="com.transcend.otg.FeedbackFragment"
              android:label="@string/feedbackTitle"
              tools:layout="@layout/fragment_feedback"/>

    <fragment android:id="@+id/helpFragment"
              android:name="com.transcend.otg.HelpFragment"
              android:label="@string/helpTitle"
              tools:layout="@layout/fragment_help"/>

    <fragment android:id="@+id/statementFragment"
              android:name="com.transcend.otg.StatementFragment"
              android:label="@string/statementTitle"
              tools:layout="@layout/fragment_statement"/>

    <fragment android:id="@+id/homeFragment"
              android:name="com.transcend.otg.HomeFragment"
              android:label="@string/homeTitle"
              tools:layout="@layout/fragment_home">
        <action android:id="@+id/action_homeFragment_to_browserFragment"
                app:destination="@id/browserFragment"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"
                app:popUpTo="@id/browserFragment"
                app:popUpToInclusive="true"
                app:launchSingleTop="true"/>
        <action android:id="@+id/action_homeFragment_to_feedbackFragment"
                app:destination="@id/feedbackFragment"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"
                app:popUpTo="@id/feedbackFragment"
                app:popUpToInclusive="true"
                app:launchSingleTop="true"/>
        <action android:id="@+id/action_homeFragment_to_statementFragment"
                app:destination="@id/statementFragment"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"
                app:popUpTo="@id/statementFragment"
                app:popUpToInclusive="true"
                app:launchSingleTop="true"/>
        <action android:id="@+id/action_homeFragment_to_EULAFragment"
                app:destination="@id/EULAFragment"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"
                app:popUpTo="@id/EULAFragment"
                app:popUpToInclusive="true"
                app:launchSingleTop="true"/>
        <action
                android:id="@+id/action_homeFragment_to_helpFragment"
                app:destination="@id/helpFragment" />
    </fragment>

    <fragment
            android:id="@+id/startPermissionFragment"
            android:name="com.transcend.otg.StartPermissionFragment"
            android:label="PermissionFragment" />
</navigation>